--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <form>
                     <label for="search-city">Search for a City:</label>
                     <div class="form-row">
-                        <input id="search-city" class="form-control" name="city" value="Austin"></input>
+                        <input id="search-city" class="form-control" name="city" ></input>
                         <!-- fontawesome magnifying glass -->
                         <button id="search-button" class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                     </div>
