--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
-    <!-- Jumbotron to display the City name upon search -->
+  
     <div id="header" class="jumbotron jumbotron-fluid text-container">
-        <h1 id="header-text" class="display-2"></h1>
-        <div id="artist-credit"></div>
+        <h1 id="header-text"> Weather Dashboard</h1>
     </div>
 
     <!-- Main container for webpage content -->
@@ -30,7 +29,7 @@
                 <form>
                     <label for="search-city">Search for a City:</label>
                     <div class="form-row">
-                        <input id="search-city" class="form-control" name="city" ></input>
+                        <input id="search-city" class="form-control" name="city"></input>
                         <!-- fontawesome magnifying glass -->
                         <button id="search-button" class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                     </div>
